--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="w-full self-center px-4 lg:w-1/2">
-                    <h1 class="text-base font-semibold text-primary md:text-xl ">Halo Nama Saya 
-                        <span class="block font-bold text-slate-900 text-4xl mt-1 lg:text-5xl">Abdi Ryan Ilham</span></h1>
-                    <h2 class="font-medium text-secondry text-lg mb-5 lg:text-3xl ">Pelajar | <span class="text-black">Belajar </span></h2>
-                    <p class="font-medium text-secondry mb-10 text-lg">Saya seorang pelajar <span class="text-primary font-semibold">SMK NEGERI 1 BANGSRI</span>, <br>Mengambil Jurusan PPLG Yang Memiliki Skill Dasar <span class="text-primary font-semibold">Frond End</span> <br>Dan memiliki Tambahan Skill seperti <span class="text-primary font-semibold">UI/UX</span> </p>
-                    <a href="https://www.instagram.com/ryannnn.ilhm?utm_source=qr&igsh=enpjdWxmYjNvdTNw" target="_blank" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:opacity-80 transition duration-300 ease-in-out">Hubungi Saya</a>
-                    <a href="https://drive.google.com/drive/folders/1uxRkMdAEKCBV_52w98jdubmYVqLGFLrR?usp=sharing" target="_blank" class="text-base font-semibold text-primary bg-white py-3 px-8 rounded-full hover:opacity-80 transition duration-300 ease-in-out border">Download CV</a>
+                    <h1 class=" text-xl font-semibold text-primary md:text-xl ">Halo Nama Saya 
+                        <span class="block font-bold text-slate-900 text-3xl mt-1 lg:text-4xl">Abdi Ryan Ilham</span></h1>
+                    <h2 class="font-medium text-secondry text-lg mb-5 lg:text-1xl ">Pelajar | <span class="text-black">Belajar </span></h2>
+                    <p class="font-medium text-secondry mb-10 text-lg">Saya seorang pelajar <span class="text-primary font-medium">SMK NEGERI 1 BANGSRI</span>, <br>Mengambil Jurusan PPLG Yang Memiliki Skill Dasar <span class="text-primary font-medium">Frond End</span> <br>Dan memiliki Tambahan Skill seperti <span class="text-primary font-medium">UI/UX</span> </p>
+                    <a href="https://www.instagram.com/ryannnn.ilhm?utm_source=qr&igsh=enpjdWxmYjNvdTNw" target="_blank" class="text-sm lg:text-lg font-semibold text-white bg-primary py-3 px-8 rounded-full hover:opacity-80 transition duration-300 ease-in-out ">Hubungi Saya</a>
+                    <a href="https://drive.google.com/drive/folders/1uxRkMdAEKCBV_52w98jdubmYVqLGFLrR?usp=sharing" target="_blank" class="text-sm lg:text-lg font-semibold text-primary bg-white py-3 px-8 rounded-full hover:opacity-80 transition duration-300 ease-in-out border">Download CV</a>
                 </div>
                 <div class="w-full self-end px-4 lg:w-1/2">
                     <div class="relative mt-10 lg:mt-9 lg:right-0">
@@ -83,7 +83,7 @@
             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-10 lg:w-1/2">
                     <h4 class="font-bold uppercase text-primary text-lg mb-3">tentang saya</h4>
-                    <h2 class="font-bold text-black text-3xl mb-5 max-w-md lg:text-4xl">Abdi Ryan Ilham</h2>
+                    <h2 class="font-bold text-black text-2xl mb-3 max-w-md lg:text-3xl">ABDI RYAN ILHAM</h2>
                     <p class="font-medium text-base text-secondry lg:text-lg">Saya lahir pada <span class="text-primary">12 Februari 2008</span>, sekarang saya tinggal di <span class="text-primary">Kabupaten Jepara Kecamatan Bangsri lebih tepatnya lagi berada di Desa Banjaran Rt02 Rw01</span>. Saat ini saya menempuh pendidikan di salah satu SMK yang berada di Bangsri yaitu SMK N 1 Bangsri. Memasuki jurusan yang awalnya tidak tau apa itu coding, Namun ketertarikan terhadap teknologi menjadikan saya memilih jurusan PPLG. Bukan hanya ketertarikan yang membuat saya bertahan, pemikiran saya terhadap dunia yang sudah penuh dengan teknologi. "Jika tidak Tau Rugi Dong!!"</p>
                 </div>
                 <div class="w-full px-4 lg:w-1/2">
